# SimpleOverlay

./: CMakeLists.txt  README.md  obs.txt.in
src/game-captor/: CMakeLists.txt
src/game-captor-test/: CMakeLists.txt
src/game-captor-test/private/: main.cpp
src/game-captor/private/: game_capture.cpp
src/game-captor/private/windows/: game_capture_windows.cpp  game_capture_windows.h
src/game-captor/public/: game_capture.h  game_capture_export_defs.h
